<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="#354685"
    android:orientation="horizontal" >

    <!-- android:visibility="gone" -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="#ffffff"
            android:gravity="center"
            android:text="Client Side Application"
            android:textColor="#141f4c"
            android:textSize="30dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textview1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_serverside"
            android:layout_marginTop="10dp"
            android:background="#141f4c"
            android:text="Client's Message"
            android:textColor="#ffffff"
            android:textSize="18dp" />
        
        <EditText android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_client_msg"
            android:ems="10"
            android:background="#ffffff"
            android:inputType="textPersonName"
            android:textColor="#141f4c"
            android:hint="Please Enter Message"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:weightSum="2" >

            <Button
                android:id="@+id/btn_connect"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#00000000"
                android:drawableTop="@drawable/btn_connect"
                android:text="@string/connect_peer_button"
                android:textColor="#ffffff" 
                />

            <Button
                android:id="@+id/btn_disconnect"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#00000000"
                android:drawableTop="@drawable/btn_disconnect"
                android:text="@string/disconnect_peer_button"
                android:textColor="#ffffff" />
            
            <Button
                android:id="@+id/btn_sendimage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#00000000"
                android:drawableTop="@drawable/btn_sendimage"
                android:text="@string/send_image_button"
                android:textColor="#ffffff"
              android:visibility="gone"   />
        </LinearLayout>

        <TextView
            android:id="@+id/textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_serverside"
            android:layout_marginTop="10dp"
            android:background="#141f4c"
            android:text="Device Information"
            android:textColor="#ffffff"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/device_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textColor="#ffffff" />

        <TextView
            android:id="@+id/device_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#ffffff" />

        <TextView
            android:id="@+id/group_owner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#ffffff" />

        <TextView
            android:id="@+id/group_ip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#ffffff" />
    </LinearLayout>

</FrameLayout>